--- a/pages/spin-wheel-1.html
+++ b/pages/spin-wheel-1.html
@@ -104,7 +104,7 @@
                                     </div> -->
                                 </div>
                             </div>
-                            <a href="#" class="wu-spin-wheel__btn">Spin Wheel</a>
+                            <a href="../pages/spin-wheel-2.html" class="wu-spin-wheel__btn">Spin Wheel</a>
                         </div>
                         <!-- right box -->
                         <div class="wu-spin-wheel__right">
@@ -157,29 +157,29 @@
         crossorigin="anonymous"></script>
     <script src="../assets/js/script.js"></script>
     <script type="text/javascript">
-        const spinbtn = document.querySelector('.wu-spin-wheel__btn');
-        const spinbody = document.querySelector('.wu-spin-wheel');
-        var video = document.querySelector(".wu-spin-wheel__spinner video");
-        const price_details = document.querySelector(".price-details");
+        // const spinbtn = document.querySelector('.wu-spin-wheel__btn');
+        // const spinbody = document.querySelector('.wu-spin-wheel');
+        // var video = document.querySelector(".wu-spin-wheel__spinner video");
+        // const price_details = document.querySelector(".price-details");
 
-        spinbtn.addEventListener('click', (e) => {
-            e.preventDefault();
+        // spinbtn.addEventListener('click', (e) => {
+            // e.preventDefault();
             // transition
-            spinbody.classList.add('wu-spin-wheel--spin');
+            // spinbody.classList.add('wu-spin-wheel--spin');
             // to hide price details header
-            price_details.classList.add("price-details--hide");
+            // price_details.classList.add("price-details--hide");
             // video play onclick
-            if (video.paused) {
-                video.play();
-            }
-            else {
-                video.pause();
-            }
+            // if (video.paused) {
+            //     video.play();
+            // }
+            // else {
+            //     video.pause();
+            // }
             // redirecting page 20s
-            window.setTimeout(function () {
-                window.location.href = "../pages/spin-wheel-3.html";
-            }, 20000);
-        })
+            // window.setTimeout(function () {
+            //     window.location.href = "../pages/spin-wheel-3.html";
+            // }, 20000);
+        // })
     </script>
     <!-- scripts -->
 </body>
