--- a/pages/spin-wheel-2.html
+++ b/pages/spin-wheel-2.html
@@ -100,9 +100,10 @@
                                     <!-- <div class="wu-spin-wheel__pointer">
                                         <img src="../assets/images/wheel-pointer.svg" alt="">
                                     </div> -->
+                                    <p class="wu-spin-wheel__spinwords">dummy text</p>
                                 </div>
                             </div>
-                            <a href="../pages/spin-wheel-2.html" class="wu-spin-wheel__btn">Spin Wheel</a>
+                            <!-- <a href="../pages/spin-wheel-2.html" class="wu-spin-wheel__btn">Spin Wheel</a> -->
                         </div>
                         <!-- right box -->
                         <div class="wu-spin-wheel__right">
