spin-weel-bg-animation updation

--- a/pages/spin-weel-bg-animation.html
+++ b/pages/spin-weel-bg-animation.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <!-- Header end -->
-    <div class="test-block">
+    <div class="spinWeelBg_body">
      
     </div>
     <!-- footer start -->
