--- a/pages/spin-wheel-2.html
+++ b/pages/spin-wheel-2.html
@@ -22,7 +22,7 @@
         <div class="wu-spin-wheel__bodybg">
             <video src="../assets/images/spin-wheel-bg-vid.mp4" autoplay="true" loop="true" muted></video>
         </div>
-        <div class="wu-spin-wheel__outer">
+        <div class="wu-spin-wheel__outer spinWeelBg_body">
             <div class="wu-spin-wheel__head">
                 <div class="wu-spin-wheel__logo" style="background-image: url('../assets/images/black-logo-bg.png');">
                     <img src="../assets/images/spin-wheel-logo.svg" alt="">
