--- a/pages/spin-wheel-2.html
+++ b/pages/spin-wheel-2.html
@@ -5,10 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- styles -->
-    <!-- <link rel="stylesheet" href="../assets/css/aos.css">
-    <link rel="stylesheet" href="../assets/css/slick.css">
-    <link rel="stylesheet" href="../assets/css/slick-theme.css">
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css" />
@@ -95,15 +91,10 @@
                                 <div class="wu-spin-wheel__disc">
                                     <div class="wu-spin-wheel__spinner">
                                         <video src="../assets/images/Spin-Wheel-Video.mp4"></video>
-                                        <!-- <img src="../assets/images/luckywheel_inner.png" alt=""> -->
                                     </div>
-                                    <!-- <div class="wu-spin-wheel__pointer">
-                                        <img src="../assets/images/wheel-pointer.svg" alt="">
-                                    </div> -->
                                     <p class="wu-spin-wheel__spinwords">dummy text</p>
                                 </div>
                             </div>
-                            <!-- <a href="../pages/spin-wheel-2.html" class="wu-spin-wheel__btn">Spin Wheel</a> -->
                         </div>
                         <!-- right box -->
                         <div class="wu-spin-wheel__right">
@@ -163,10 +154,7 @@
     <!-- modal body -->
 
     <!-- scripts -->
-    <!-- <script src="../assets/js/jquery.slim.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-  <!-- <script src="../assets/js/aos.js"></script>
-  <script src="../assets/js/slick.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
@@ -176,6 +164,7 @@
         const spinbody = document.querySelector('.wu-spin-wheel');
         var video = document.querySelector(".wu-spin-wheel__spinner video");
         const price_details = document.querySelector(".price-details");
+        const spinanim = document.querySelector(".wu-spin-wheel__outer");
 
         $(window).on('load', function() {
             // transitions
@@ -190,6 +179,7 @@
             // popup close
             $('.wu-spin-wheel__modal').hide();
             $('.modal-backdrop').remove();
+            spinanim.classList.add("wu-spin-wheel--anim");
             // video play onclick
             if (video.paused) {
                 video.play();
