--- a/organisms/happiness-rwd.html
+++ b/organisms/happiness-rwd.html
@@ -18,16 +18,12 @@
     <div class="wu-happiness-rwd">
         <div class="content-wrapper">
            <div class="wu-happiness-rwd__outer">
-            <div class="wu-happiness-rwd__imagesec">
-                <img src="../assets/images/4 win streak high .png" alt="">
+            <div class="wu-happiness-rwd__imagesec" style="background-image: url('../assets/images/happiness-reward-badge.png');">
+                <span>444</span>
             </div>
-            <div class="wu-happiness-rwd__contentsec wu-para">
-                Celebrate 4 redeemed stamps! More gifts
-await as you redeem more. Discover
-endless surprises!
-            </div>
+            <p class="wu-happiness-rwd__contentsec wu-para">Celebrate 4 redeemed stamps! More gifts await as you redeem more. Discover endless surprises!</p>
           </div>
-           </div>  
+        </div>  
     </div>
    
     <!-- body content end -->
