--- a/molecules/notification-modal.html
+++ b/molecules/notification-modal.html
@@ -35,7 +35,27 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- Modal div-->
+    <div class="wu-modal-notification">
+      <div class="wu-modal-notification__outer">
+        <div class="modal-content">
+            <div class="wu-modal-notification__body">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="wu-modal-left">
+              <h2 class="wu-title">Be the First to Know: Special Offers</h2>
+              <p class="wu-para">Get notified to our exclusive offers and features</p>
+              <button class="wu-btn wu-btn--black" data-bs-dismiss="modal" aria-label="Close">Okay</button>
+            </div>
+            <div class="wu-modal-right">
+              <div class="wu-modal-rightbg desk-visible" style="background-image: url(../assets/images/modal-bg-desk.png);"></div>
+              <div class="wu-modal-rightbg only-mobile" style="background-image: url(../assets/images/modal-bg-mob.png);"></div>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
 
     <!-- scripts -->
     <script src="../assets/js/jquery.slim.min.js"></script>
