--- a/organisms/mini-banner.html
+++ b/organisms/mini-banner.html
@@ -15,9 +15,40 @@
   </head>
   <body>
     <!-- body content start -->
-    <div class="wu-minibanner" style="background-image: url('../assets/images/mini-banner-yellow.png');">
+    <div class="wu-minibanner">
+      <div class="wu-minibanner__bg desk-visible" style="background-image: url('../assets/images/mini-banner-yellow.png');"></div>
+      <div class="wu-minibanner__bg only-mobile" style="background-image: url('../assets/images/mini-banner-yellowmob.png');"></div>
         <div class="content-wrapper">
-            
+          <div class="wu-minibanner__outer">
+            <div class="wu-minibanner__cnt">
+              <div class="wu-minibanner__left">
+                <h1 class=" wu-title">Earn Rewards: <span>Refer a Friend</span></h1>
+              </div>
+              <div class="wu-minibanner__right">
+                <img src="../assets/images/mini-banner-men.png" alt="" class="desk-visible hide-mobile-tablet ">
+                <img src="../assets/images/mini-banner-men-mob.png" alt="" class="only-mobile-tablet">
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <!-- body content end -->
+    <!-- body content start -->
+    <div class="wu-minibanner wu-minibanner--white">
+      <div class="wu-minibanner__bg desk-visible" style="background-image: url('../assets/images/mini-banner-white.png');"></div>
+      <div class="wu-minibanner__bg only-mobile" style="background-image: url('../assets/images/mini-banner-whitemob.png');"></div>
+        <div class="content-wrapper">
+          <div class="wu-minibanner__outer">
+            <div class="wu-minibanner__cnt">
+              <div class="wu-minibanner__left">
+                <h1 class=" wu-title">My friend referrals</h1>
+              </div>  
+              <div class="wu-minibanner__right">
+                <img src="../assets/images/min-banner-logo.png" alt="" class="desk-visible hide-mobile-tablet ">
+                <img src="../assets/images/min-banner-logo.png" alt="" class="only-mobile-tablet">
+              </div>
+            </div>
+          </div>
         </div>
     </div>
     <!-- body content end -->
