--- a/organisms/qr-referal.html
+++ b/organisms/qr-referal.html
@@ -44,9 +44,17 @@
                     </div>
                 <!-- body content end -->
             </div>
-            <div class="wu-qr-referal__btn">
-                <button class="wu-btn wu-btn--black">My Referrals</button>
+            <!-- Reward start -->
+            <div class="col-12 col-md-4 col-lg-3 mx-auto mb-4">
+                <div style="background-image: url(../assets/images/reward-bg.png);" class="wu-reward">
+                <h2 class="wu-reward__digit">10</h2>
+                <h5 class="wu-reward__subtxt">Referrals</h5>
+                <p class="wu-reward__discrip">Referral is counted when your friend registers and remits money via Western Union.
+                </p>
+                </div>
             </div>
+            <!-- Reward end -->
+            <button class="wu-btn wu-btn--black mx-auto">My Referrals</button>
         </div>
     </div>
     <!-- body content end -->
