--- a/molecules/reward-tile.html
+++ b/molecules/reward-tile.html
@@ -19,9 +19,9 @@
   <!-- Reward start -->
   <div class="col-6 col-md-4 col-lg-3">
     <div style="background-image: url(../assets/images/reward-bg.png);" class="wu-reward">
-      <h2 class="wu-reward__digit">10</h2>
-      <h5 class="wu-reward__subtxt">Referrals</h5>
-      <p class="wu-reward__discrip">Referral is counted when your friend registers and remits money via Western Union.
+      <h2 class="wu-title">10</h2>
+      <h5 class="wu-sub-title">Referrals</h5>
+      <p class="wu-para">Referral is counted when your friend registers and remits money via Western Union.
       </p>
     </div>
   </div>
