my-friend-referal

--- a/pages/refer-a-friend.html
+++ b/pages/refer-a-friend.html
@@ -93,9 +93,16 @@
                           </svg>                                             
                     </a>
                     <a href="" class="wu-share-modal__icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M36 20.098C36 11.2071 28.8369 4 20.002 4C11.1631 4.002 4 11.2071 4 20.1C4 28.133 9.85127 34.7921 17.4983 36V24.7514H13.4388V20.1H17.5023V16.5504C17.5023 12.5169 19.892 10.2892 23.5456 10.2892C25.2973 10.2892 27.1271 10.6032 27.1271 10.6032V14.5627H25.1094C23.1236 14.5627 22.5037 15.8045 22.5037 17.0784V20.098H26.9391L26.2312 24.7494H22.5017V35.998C30.1487 34.7901 36 28.131 36 20.098Z" fill="#0A0005"/>
-                            </svg>                                              
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                            <g clip-path="url(#clip0_1126_171)">
+                              <path d="M12.4743 24.1582L12.6939 23.5H12H4C2.06364 23.5 0.5 21.9364 0.5 20V4C0.5 2.06364 2.06364 0.5 4 0.5H28C29.9364 0.5 31.5 2.06364 31.5 4V20C31.5 21.9364 29.9364 23.5 28 23.5H21.3312H21.1799L21.0539 23.584L10.2669 30.7753L12.4743 24.1582Z" fill="black" stroke="black"/>
+                            </g>
+                            <defs>
+                              <clipPath id="clip0_1126_171">
+                                <rect width="32" height="32" fill="white"/>
+                              </clipPath>
+                            </defs>
+                          </svg>                                            
                     </a>
                 </div>
             <!-- body content end -->
@@ -104,9 +111,9 @@
         <!-- Reward start -->
         <div class="col-12 col-md-4 col-lg-3 mx-auto mb-4">
             <div style="background-image: url(../assets/images/reward-bg.png);" class="wu-reward">
-            <h2 class="wu-reward__digit">10</h2>
-            <h5 class="wu-reward__subtxt">Referrals</h5>
-            <p class="wu-reward__discrip">Referral is counted when your friend registers and remits money via Western Union.
+            <h2 class="wu-title">10</h2>
+            <h5 class="wu-sub-title">Referrals</h5>
+            <p class="wu-para">Referral is counted when your friend registers and remits money via Western Union.
             </p>
             </div>
         </div>
