--- a/pages/my-friend-referal.html
+++ b/pages/my-friend-referal.html
@@ -73,7 +73,7 @@
     <div class="content-wrapper">
           <!-- Reward-Referal start -->
           <div class="row">       
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="wu-referal reward">
                 <div class="wu-referal__sec-one">
                   <div class="wu-referal__pro-icon">
@@ -83,7 +83,7 @@
                         fill="#FCE450" />
                     </svg>
                   </div>
-                  <div class="wu-title">Ankur 10</div>
+                  <div class="wu-title">Refer Neil</div>
                 </div>
                 <div class="wu-referal__row2">
                   <div class="wu-referal__sec-one">
@@ -118,11 +118,11 @@
                         fill="#B35F00" />
                     </svg>
                   </div>
-                  <div class="wu-referal__green wu-referal__green--red">Joined and remitted</div>
+                  <div class="wu-referal__green wu-referal__green--red">Joined but not remitted</div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="wu-referal reward">
                 <div class="wu-referal__sec-one">
                   <div class="wu-referal__pro-icon">
@@ -171,7 +171,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="wu-referal reward">
                 <div class="wu-referal__sec-one">
                   <div class="wu-referal__pro-icon">
@@ -220,7 +220,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="wu-referal reward">
                 <div class="wu-referal__sec-one">
                   <div class="wu-referal__pro-icon">
@@ -269,7 +269,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="wu-referal reward">
                 <div class="wu-referal__sec-one">
                   <div class="wu-referal__pro-icon">
