--- a/pages/my-friend-referal.html
+++ b/pages/my-friend-referal.html
@@ -59,8 +59,9 @@
               <h1 class=" wu-title">My friend referrals</h1>
             </div>  
             <div class="wu-minibanner__right">
-              <img src="../assets/images/min-banner-logo.png" alt="" class="desk-visible hide-mobile-tablet ">
-              <img src="../assets/images/min-banner-logo.png" alt="" class="only-mobile-tablet">
+              <div class="wu-minibanner__rightbg desk-visible hide-mobile-tablet" style="background-image: url('../assets/images/min-banner-logo.png');">
+                <h4 class="wu-title">10</h4>
+              </div>
             </div>
           </div>
         </div>
