--- a/pages/refer-a-friend.html
+++ b/pages/refer-a-friend.html
@@ -55,7 +55,8 @@
         <div class="wu-minibanner__outer">
           <div class="wu-minibanner__cnt">
             <div class="wu-minibanner__left">
-              <h1 class=" wu-title">Earn Rewards: <span>Refer a Friend</span></h1>
+              <h1 class=" wu-title">Earn Rewards:</h1>
+              <h1 class=" wu-title__italic">Refer a Friend</h1>
             </div>
             <div class="wu-minibanner__right">
               <img src="../assets/images/mini-banner-men.png" alt="" class="desk-visible hide-mobile-tablet ">
