--- a/Ad-banners/300x50/300x50.html
+++ b/Ad-banners/300x50/300x50.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="ad.size" content="width=300, height=250" />
+    <meta name="ad.size" content="width=300, height=50" />
     <title>Western Union</title>
 
     <style type="text/css">
@@ -17,44 +17,44 @@
             padding: 0;
             margin: 0;
             width: 300px;
-            height: 250px;
+            height: 50px;
             position: relative;
         }
 
         .container {
             background-color: #ffffff;
             width: 300px;
-            height: 250px;
+            height: 50px;
             position: relative;
             overflow: hidden;
         }
 
         .bg {
             width: 300px;
-            height: 250px;
+            height: 50px;
             position: absolute;
             top: 0;
             left: 0;
             background-image: url('assets/bg.png');
             background-repeat: no-repeat;
-            background-size: 300px 250px;
+            background-size: 300px 50px;
         }
 
         .banner-link .button {
-            width: 158.22px;
-            height: 25.42px;
+            width: 75.552px;
+            height: 18.8585px;
             position: absolute;
-            left: 71.35px;
-            bottom: 11.25px;
+            right: 12.1235px;
+            top: 15.3393px;
             background-color: transparent;
             z-index: 22;
-            background-image: url('assets/btn-2.svg');
+            background-image: url('assets/btn-1.svg');
             background-repeat: no-repeat;
-            background-size: 158.22px 25.42px;
+            background-size: 75.552px 18.8585px;
         }
 
         .banner-link:hover .button {
-            background-image: url('assets/btn-1.svg');
+            background-image: url('assets/btn-2.svg');
         }
     </style>
     <script type="text/javascript">
