--- a/Ad-banners/728x90/728x90.html
+++ b/Ad-banners/728x90/728x90.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="ad.size" content="width=300, height=250" />
+    <meta name="ad.size" content="width=728, height=90" />
     <title>Western Union</title>
 
     <style type="text/css">
@@ -16,45 +16,45 @@
             background-color: #e1e1e1;
             padding: 0;
             margin: 0;
-            width: 300px;
-            height: 250px;
+            width: 728px;
+            height: 90px;
             position: relative;
         }
 
         .container {
             background-color: #ffffff;
-            width: 300px;
-            height: 250px;
+            width: 728px;
+            height: 90px;
             position: relative;
             overflow: hidden;
         }
 
         .bg {
-            width: 300px;
-            height: 250px;
+            width: 728px;
+            height: 90px;
             position: absolute;
             top: 0;
             left: 0;
             background-image: url('assets/bg.png');
             background-repeat: no-repeat;
-            background-size: 300px 250px;
+            background-size: 728px 90px;
         }
 
         .banner-link .button {
-            width: 158.22px;
-            height: 25.42px;
+            width: 183.3394px;
+            height: 43.3366px;
             position: absolute;
-            left: 71.35px;
-            bottom: 11.25px;
+            right: 28.8482px;
+            top: 23.3037px;
             background-color: transparent;
             z-index: 22;
-            background-image: url('assets/btn-2.svg');
+            background-image: url('assets/btn-1.svg');
             background-repeat: no-repeat;
-            background-size: 158.22px 25.42px;
+            background-size: 183.3394px 43.3366px;
         }
 
         .banner-link:hover .button {
-            background-image: url('assets/btn-1.svg');
+            background-image: url('assets/btn-2.svg');
         }
     </style>
     <script type="text/javascript">
