feat: qr code scanner page

--- a/organisms/header.html
+++ b/organisms/header.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
           <a class="navbar-brand wu-header__logo" href="#">
             <img src="../assets/images/logo-small.svg" class="only-mobile">
-            <img src="../assets/images/logo_YellowWhite.png" class="desk-visible">
+            <img src="../assets/images/logo-yellow-white.svg" class="desk-visible">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
