--- a/pages/qr-scanner.html
+++ b/pages/qr-scanner.html
@@ -19,7 +19,7 @@
       <header class="wu-header wu-header--simple">
          <div class="content-wrapper">
             <div class="wu-header__content">
-               <a href="" class="wu-header__logo">
+               <a href="https://www.westernunion.com/sg/en/home.html" class="wu-header__logo" target="_blank">
                   <img src="../assets/images/logo-yellow-white.svg" alt="" class="wu-header__logo-img" />
                </a>
             </div>
@@ -47,10 +47,10 @@
                      </div>
                      <p class="wu-qrsec__rt-para">You can also send money through the <br> <strong>Western Union App</strong></p>
                      <div class="wu-qrsec__stores">
-                        <a href="" class="wu-qrsec__store">
+                        <a href="https://apps.apple.com/sg/app/western-union-send-money-sg/id1451754888" class="wu-qrsec__store">
                            <img src="../assets/images/appstore.svg" alt="" class="wu-qrsec__store-img">
                         </a>
-                        <a href="" class="wu-qrsec__store">
+                        <a href="https://play.google.com/store/apps/details?id=com.westernunion.moneytransferr3app.sg" class="wu-qrsec__store">
                            <img src="../assets/images/playstore.svg" alt="" class="wu-qrsec__store-img">
                         </a>
                      </div>
@@ -65,10 +65,10 @@
          <div class="wu-footer__tp">
             <div class="content-wrapper">
                <div class="wu-footer__tp-content">
-                  <a href="" class="wu-footer__logo">
+                  <a href="https://www.westernunion.com/sg/en/home.html" class="wu-footer__logo" target="_blank">
                      <img src="../assets/images/logo-black-len.svg" class="wu-footer__logo-img" />
                   </a>
-                  <div class="wu-footer__medias">
+                  <!-- <div class="wu-footer__medias">
                      <a href="" class="wu-footer__media">
                         <img src="../assets/images/icon-fb.svg" alt="" class="wu-footer__media-i">
                      </a>
@@ -81,7 +81,7 @@
                      <a href="" class="wu-footer__media">
                         <img src="../assets/images/icon-tw.svg" alt="" class="wu-footer__media-i">
                      </a>
-                  </div>
+                  </div> -->
                </div>
             </div>
          </div>
