--- a/Ad-banners/320x50/320x50.html
+++ b/Ad-banners/320x50/320x50.html
@@ -58,7 +58,7 @@
         }
     </style>
     <script type="text/javascript">
-        var clickTag = "https://www.cathaypacific.com/";
+        var clickTag = "https://cricketworldcup.qrcrmplus.com/";
     </script>
 </head>
 
