--- a/Ad-banners/970x250/970x250.html
+++ b/Ad-banners/970x250/970x250.html
@@ -65,7 +65,7 @@
         }
     </style>
     <script type="text/javascript">
-        var clickTag = "https://www.cathaypacific.com/";
+        var clickTag = "https://cricketworldcup.qrcrmplus.com/";
     </script>
 </head>
 
