--- a/pages/qr-scanner.html
+++ b/pages/qr-scanner.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
       <link rel="stylesheet" href="../assets/css/style.css" />
       <!-- styles -->
-      <title>Document</title>
+      <title>Western Union</title>
    </head>
    <body>
       <!-- qr scanner start -->
@@ -47,10 +47,10 @@
                      </div>
                      <p class="wu-qrsec__rt-para">You can also send money through the <br> <strong>Western Union App</strong></p>
                      <div class="wu-qrsec__stores">
-                        <a href="https://apps.apple.com/sg/app/western-union-send-money-sg/id1451754888" class="wu-qrsec__store">
+                        <a href="https://apps.apple.com/sg/app/western-union-send-money-sg/id1451754888" class="wu-qrsec__store" target="_blank">
                            <img src="../assets/images/appstore.svg" alt="" class="wu-qrsec__store-img">
                         </a>
-                        <a href="https://play.google.com/store/apps/details?id=com.westernunion.moneytransferr3app.sg" class="wu-qrsec__store">
+                        <a href="https://play.google.com/store/apps/details?id=com.westernunion.moneytransferr3app.sg" class="wu-qrsec__store" target="_blank">
                            <img src="../assets/images/playstore.svg" alt="" class="wu-qrsec__store-img">
                         </a>
                      </div>
