--- a/pages/qr-scanner.html
+++ b/pages/qr-scanner.html
@@ -4,6 +4,14 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      
+      <!-- Google Tag Manager -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-PNTSRMH9');</script>
+      <!-- End Google Tag Manager -->
       <!-- styles -->
       <link rel="stylesheet" href="../assets/css/aos.css" />
       <link rel="stylesheet" href="../assets/css/slick.css" />
@@ -14,6 +22,10 @@
       <title>Western Union</title>
    </head>
    <body>
+      <!-- Google Tag Manager (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNTSRMH9"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!-- End Google Tag Manager (noscript) -->
       <!-- qr scanner start -->
       <!-- Header start -->
       <header class="wu-header wu-header--simple">
