--- a/pages/qr-scanner.html
+++ b/pages/qr-scanner.html
@@ -52,11 +52,11 @@
                </div>
                <div class="wu-qrsec__rt">
                   <div class="wu-qrsec__rt-in">
-                     <h4 class="wu-qrsec__rt-title">Scan to get surprise rewards</h4>
+                     <h4 class="wu-qrsec__rt-title">Scan or Click the QR code to get Surprise Rewards</h4>
                      <p class="wu-qrsec__rt-para">Send money through Western Union outlets at Boon Lay MRT, Boon Lay Shopping Center, Goodland Building, Jurong East MRT and Kerbau </p>
-                     <div class="wu-qrsec__qr">
+                     <a href="https://qrme.cloud/customer/language-selection" class="wu-qrsec__qr" target="_blank">
                         <img src="../assets/images/qrcode.png" alt="" class="wu-qrsec__qr-img">
-                     </div>
+                     </a>
                      <p class="wu-qrsec__rt-para">You can also send money through the <br> <strong>Western Union App</strong></p>
                      <div class="wu-qrsec__stores">
                         <a href="https://apps.apple.com/sg/app/western-union-send-money-sg/id1451754888" class="wu-qrsec__store" target="_blank">
