--- a/organisms/loyaltyprgrm.html
+++ b/organisms/loyaltyprgrm.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="../assets/css/slick-theme.css">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link data-react-helmet="true" rel="icon" href="../assets/images/favicon.ico">
     <!-- styles -->
-    <title>Document</title>
+    <title>Western Union</title>
   </head>
   <body>
     <!-- body content start -->
@@ -62,7 +63,7 @@
                     <div class="loyaltyprgrm__containerwrap">
                         <!-- tile -->
                     <div class="loyaltyprgrm__giftwrap">
-                        <button type="button" class="loyaltyprgrm__stmpbtn" data-bs-toggle="modal" data-bs-target="#wu-lpmodal2">
+                        <button type="button" class="loyaltyprgrm__stmpbtn" data-bs-toggle="modal" data-bs-target="#wu-lpmodal1">
                             <div class="wu-gift">
                                 <div class="wu-gift__top">
                                   <div class="wu-gift__img">
@@ -87,7 +88,7 @@
                         </button>
                     </div>
                     <div class="loyaltyprgrm__giftwrap">
-                        <button type="button" class="loyaltyprgrm__stmpbtn" data-bs-toggle="modal" data-bs-target="#wu-lpmodal3">
+                        <button type="button" class="loyaltyprgrm__stmpbtn" data-bs-toggle="modal" data-bs-target="#wu-lpmodal1">
                             <div class="wu-gift">
                                 <div class="wu-gift__top">
                                   <div class="wu-gift__img">
@@ -113,13 +114,8 @@
                     </div>
                     </div>
                 </div>
-
             </div>
         </div>
-
-        <!-- custom fade areas -->
-        <div id="fade-area-1" class="loyaltyprgrm__backdrp d-none"></div>
-        <div id="fade-area-2" class="loyaltyprgrm__backdrp d-none"></div>
      </div>
 
      <!-- Modal -->
@@ -128,9 +124,7 @@
         <div class="modal-content">
             <div class="overlay"></div>
             <div class="modal-body">
-                You have chosen one transaction promotion, you cannot choose two transactions later on
-
-                first
+                You have chosen one transaction promotion, you cannot choose two transactions later on first
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
@@ -139,37 +133,7 @@
         </div>
         </div>
     </div>
-    <!-- modal 2 -->
-     <div class="modal fade" id="wu-lpmodal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="overlay"></div>
-            <div class="modal-body">
-                You have chosen one transaction promotion, you cannot choose two transactions later on second
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
-            <button type="button" class="btn btn-primary">Continue</button>
-            </div>
-        </div>
-        </div>
-    </div>
-    <!-- modal 3 -->
-     <div class="modal fade" id="wu-lpmodal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="overlay"></div>
-            <div class="modal-body">
-                You have chosen one transaction promotion, you cannot choose two transactions later on
-                third
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
-            <button type="button" class="btn btn-primary">Continue</button>
-            </div>
-        </div>
-        </div>
-    </div>
+ 
      
 
     
