--- a/organisms/loyaltyprgrm.html
+++ b/organisms/loyaltyprgrm.html
@@ -25,6 +25,22 @@
                 </h3>
                 <!-- section - 1 -->
                 <div class="loyaltyprgrm__container">
+                <!-- Modal -->
+                <div class="modal fade" id="wu-lpmodal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="overlay"></div>
+                      <div class="modal-body">
+                          You have chosen one transaction promotion, you cannot choose two transactions later on first
+                      </div>
+                      <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
+                      <button type="button" class="btn btn-primary">Continue</button>
+                      </div>
+                  </div>
+                  </div>
+                </div>
+                  <!-- Modal ends here -->
                     <h3 class="loyaltyprgrm__stamphead">
                         One Transaction Promotion
                     </h3>
@@ -56,14 +72,30 @@
                     </div>
                 </div>
                 <!-- section - 2 -->
-                <div class="loyaltyprgrm__container">
+                <div class="loyaltyprgrm__container" style="position: relative; background-color: #fff;">
+                  <!-- Modal -->
+                  <div class="modal fade" id="wu-lpmodal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="overlay"></div>
+                        <div class="modal-body">
+                            You have chosen one transaction promotion, you cannot choose two transactions later on second
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
+                        <button type="button" class="btn btn-primary">Continue</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <!-- Modal ends here -->
                     <h3 class="loyaltyprgrm__stamphead">
                         Two Transaction Promotion
                     </h3>
                     <div class="loyaltyprgrm__containerwrap">
                         <!-- tile -->
                     <div class="loyaltyprgrm__giftwrap">
-                        <button type="button" class="loyaltyprgrm__stmpbtn" data-bs-toggle="modal" data-bs-target="#wu-lpmodal1">
+                        <button type="button" class="loyaltyprgrm__stmpbtn" data-bs-toggle="modal" data-bs-target="#wu-lpmodal2">
                             <div class="wu-gift">
                                 <div class="wu-gift__top">
                                   <div class="wu-gift__img">
@@ -88,7 +120,7 @@
                         </button>
                     </div>
                     <div class="loyaltyprgrm__giftwrap">
-                        <button type="button" class="loyaltyprgrm__stmpbtn" data-bs-toggle="modal" data-bs-target="#wu-lpmodal1">
+                        <button type="button" class="loyaltyprgrm__stmpbtn" data-bs-toggle="modal" data-bs-target="#wu-lpmodal2">
                             <div class="wu-gift">
                                 <div class="wu-gift__top">
                                   <div class="wu-gift__img">
@@ -118,21 +150,7 @@
         </div>
      </div>
 
-     <!-- Modal -->
-     <div class="modal fade" id="wu-lpmodal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="overlay"></div>
-            <div class="modal-body">
-                You have chosen one transaction promotion, you cannot choose two transactions later on first
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
-            <button type="button" class="btn btn-primary">Continue</button>
-            </div>
-        </div>
-        </div>
-    </div>
+     
  
      
 
